--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   </div>
 </div>
  <div class="footer">
-	<span style="float:left"><a href="#" onclick="setActiveStyleSheet('alternate'); return false; location.reload();">Light</a> |
-	<a href="#" onclick="setActiveStyleSheet('default'); return false; location.reload();">Dark</a></span>
+	<span style="float:left"><a href="#" onclick="setActiveStyleSheet('alternate'); return false; location.reload(true);">Light</a> |
+	<a href="#" onclick="setActiveStyleSheet('default'); return false; location.reload(true);">Dark</a></span>
     <span style="float:right">Copyright&copy; 2016 Dominic Devio</span><br>
     
     
