--- a/extraurl.html
+++ b/extraurl.html
@@ -44,7 +44,7 @@
  <div class="footer">
 	<span style="float:left"><a href="#" onclick="setActiveStyleSheet('alternate'); return false;">Light</a> |
 	<a href="#" onclick="setActiveStyleSheet('default'); return false;">Dark</a></span>
-    <span style="float:right">Copyright&copy; 2016 Dominic Devio</span><br>
+    <span style="float:right">Copyright&copy; 2016</span><br>
 </div>
 
 	<script type="text/javascript" src="scripts/styleswitcher.js"></script>
