--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  <div class="footer">
 	<span style="float:left"><a href="#" onclick="setActiveStyleSheet('alternate'); return false; location.reload(true);">Light</a> |
 	<a href="#" onclick="setActiveStyleSheet('default'); return false; location.reload(true);">Dark</a></span>
-    <span style="float:right">Copyright&copy; 2016 Dominic Devio</span><br>
+    <span style="float:right">Copyright&copy; 2016</span><br>
     
     
     <script type="text/javascript" src="scripts/styleswitcher.js"></script>
